arkts_static_test/03_Types/ets_cases/3.13_Type_string/compile-fail/TYP_03_13_025_FAIL_STRING_AS_INT.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id TYP_03_13_025_FAIL_STRING_AS_INT
 * @expect compile-fail
 * @section 3.13
 * @design 验证 string 不能隐式转换为 int
 * @note 反向用例：string 与 int 之间无隐式转换
 */
let s: string = "42"
let n: int = s